--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -27,7 +27,7 @@
 <body>
  
     <!-- Quick view -->
-    <div class="modal fade custom-modal" id="quickViewModal" tabindex="-1" aria-labelledby="quickViewModalLabel"
+    <!-- <div class="modal fade custom-modal" id="quickViewModal" tabindex="-1" aria-labelledby="quickViewModalLabel"
         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -37,7 +37,7 @@
                         <div class="col-md-6 col-sm-12 col-xs-12">
                             <div class="detail-gallery">
                                 <span class="zoom-icon"><i class="fi-rs-search"></i></span>
-                                <!-- MAIN SLIDES -->
+                                <!-- MAIN SLIDES --
                                 <div class="product-image-slider">
                                     <figure class="border-radius-10">
                                         <img src="assets/imgs/shop/product-16-2.jpg" alt="product image">
@@ -61,7 +61,7 @@
                                         <img src="assets/imgs/shop/product-16-7.jpg" alt="product image">
                                     </figure>
                                 </div>
-                                <!-- THUMBNAILS -->
+                                <!-- THUMBNAILS --
                                 <div class="slider-nav-thumbnails pl-15 pr-15">
                                     <div><img src="assets/imgs/shop/thumbnail-3.jpg" alt="product image"></div>
                                     <div><img src="assets/imgs/shop/thumbnail-4.jpg" alt="product image"></div>
@@ -72,7 +72,7 @@
                                     <div><img src="assets/imgs/shop/thumbnail-9.jpg" alt="product image"></div>
                                 </div>
                             </div>
-                            <!-- End Gallery -->
+                            <!-- End Gallery --
                             <div class="social-icons single-share">
                                 <ul class="text-grey-5 d-inline-block">
                                     <li><strong class="mr-10">Share this:</strong></li>
@@ -167,13 +167,13 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!-- Detail Info -->
+                            <!-- Detail Info --
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <header class="header-area header-style-1 header-height-2">
@@ -310,17 +310,17 @@
                                         <a href="/shop">Shop</a>
                                     </li>
                                     
-                                    <!-- <li class="position-static"><a href="#">About <i
+                                     <li class="position-static"><a href="#">About <i
                                                 class="fi-rs-angle-dow"></i></a>
                                        
-                                    </li> -->
+                                    </li> 
                                   
-                                    <!-- <li><a href="#">Pages </a> </li> -->
+                                     <li><a href="#">Pages </a> </li> 
                                        
                                    
-                                    <!-- <li>
-                                        <a href="page-contact.html">Contact</a>
-                                    </li> -->
+                                     <li>
+                                        <a href="#">Contact</a>
+                                    </li> 
                                 </ul>
                             </nav>
                         </div>
